enable remote debugging with vscode (launch.json) added jsmn.h from mreinart´s repository added fanet_holfuy.c from mreinart´s repository modified makefile for remote debugging and current needs

--- a/Groundstation/V0_2/makefile
+++ b/Groundstation/V0_2/makefile
@@ -1,15 +1,15 @@
 # FANET setting
 
 #CC=g++
-CFLAGS=-c -Wall `mysql_config --cflags` `mysql_config --libs`
+#CFLAGS=-g -c -Wall `mysql_config --cflags` `mysql_config --libs`
+CFLAGS=-g -c -Wall
 
 CC=gcc
-#CFLAGS=-c -Wall -o `mysql_config --libs` `mysql_config --cflags`
-LIBS=-lwiringPi -lmariadb -lm
+LIBS=-lwiringPi -lmariadb -lm -lcurl
 
 all: fanet_station
 
-fanet_station: main.o fanet_mysql.o
+fanet_station: main.o fanet_mysql.o fanet_holfuy.o
 	$(CC) main.o  $(LIBS) -o fanet_station
 	
 main.o: main.c
@@ -18,8 +18,11 @@ main.o: main.c
 fanet_mysql.o: fanet_mysql.c
 	$(CC) $(CFLAGS) fanet_mysql.c 
 
+fanet_holfuy.o: fanet_holfuy.c
+	$(CC) $(CFLAGS) fanet_holfuy.c 
+
 clean:
-	rm *.o fanet_station rm *.o fanet_mysql
+	rm *.o fanet_station rm *.o 
 	
 	
 
